--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="header">
 		<div class = "inner_header">
 			<div class = "logo_container">
-				<h1>MY <span>PORTFOLIO</span></h1>
+				<h1> <span>MY PORTFOLIO</span></h1>
 			</div>
 
 			<ul class="navigation">
