"changed color theme"

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,7 +10,7 @@
 	<div class="header">
 		<div class = "inner_header">
 			<div class = "logo_container">
-				<h1><span>About Me</span></h1>
+				<h1><span style = "position:relative; left:80px; top:2px;">About Me</span></h1>
 			</div>
 
 			<ul class="navigation">
@@ -21,6 +21,8 @@
 			</ul>
 
 		</div>
+
+		<div class = "mainPage"></div>
 	
 	</div> 
 
