--- a/Projects.html
+++ b/Projects.html
@@ -10,7 +10,7 @@
 	<div class="header">
 		<div class = "inner_header">
 			<div class = "logo_container">
-				<h1><span>Projects</span></h1>
+				<h1><span style = "position:relative; left:80px; top:2px;">Projects</span></h1>
 			</div>
 
 			<ul class="navigation">
@@ -21,6 +21,8 @@
 			</ul>
 
 		</div>
+
+		<div class = "mainPage"></div>
 	
 	</div> 
 
