"Created Contact me form and css file for form"

--- a/ContactMe.html
+++ b/ContactMe.html
@@ -20,6 +20,23 @@
 				<a href = "ContactMe.html"><li>Contact Me</li></a>
 			</ul>
 
+			<form action="mailto: maiabot13@gmail.com" method="post" enctype="text/plain" name = "form">
+
+				<p>
+					<label style = "position:relative; left:50px; top:200px;" for="name">Enter your name: </label>
+					<input style = "position:relative; left:50px; top:200px;" type ="text" name = "name" size = "60">
+				</p>
+				<p>
+					<label style = "position:relative; left:50px; top:400px;" for="email">Enter your email: </label>
+					<input height: style = "position:relative; left:50px; top:400px;" type ="email" name = "email" size = "60">
+				</p>
+				<p>
+					<label style = "position:relative; left:50px; top:600px;" for="pass">Enter your password: </label>
+					<input style = "position:relative; left:50px; top:600px;" type ="password" name = "pass" size = "60">
+				</p>
+				
+			</form>
+
 		</div>
 
 		<div class = "mainPage"></div>
