--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,22 +7,18 @@
 	<link rel = "stylesheet" href = "style.css" >
 </head>
 <body>
-	<div class="header">
-		<div class = "inner_header">
-			<div class = "logo_container">
-				<h1><span style = "position:relative; left:80px; top:2px;">About Me</span></h1>
-			</div>
-
-			<ul class="navigation">
-				<a href = "index.html"><li>Home</li></a>
-				<a href = "AboutMe.html"><li>About Me</li></a>
-				<a href = "Projects.html"><li>Projects</li></a>
-				<a href = "ContactMe.html"><li>Contact Me</li></a>
-			</ul>
-
+	<div class = "mainPage">
+		<div class="header">
+				<div style = " margin-left: 20%;" class = "logo_container">
+					<h1><span>About Me</span></h1>
+						<ul style = " margin-left: 100%; margin-top: 7%;" class="navigation">
+							<a href = "index.html"><li>Home</li></a>
+							<a href = "AboutMe.html"><li>About Me</li></a>
+							<a href = "Projects.html"><li>Projects</li></a>
+							<a href = "ContactMe.html"><li>Contact Me</li></a>
+						</ul>
+				</div>
 		</div>
-
-		<div class = "mainPage"></div>
 	
 	</div> 
 
