--- a/ContactMe.html
+++ b/ContactMe.html
@@ -7,39 +7,37 @@
 	<link rel = "stylesheet" href = "style.css" >
 </head>
 <body>
-	<div class="header">
-		<div class = "inner_header">
-			<div class = "logo_container">
-				<h1><span style = "position:relative; left:80px; top:2px;">Contact Me</span></h1>
-			</div>
-
-			<ul class="navigation">
-				<a href = "index.html"><li>Home</li></a>
-				<a href = "AboutMe.html"><li>About Me</li></a>
-				<a href = "Projects.html"><li>Projects</li></a>
-				<a href = "ContactMe.html"><li>Contact Me</li></a>
-			</ul>
-
-		</div>
 	<div class = "mainPage">
-		<div style = "position:relative; left:400px; top:70px;" class="formcontainer">
-			<form action="mailto: maiabot13@email.com" ?subject="Contact" method="post" enctype="text/plain" name="form">
-		
-			<label for="name">Name</label>
-			<input type= "text" id="name" name="firstname" placeholder="Enter your name....">
-		
-			<label for="phone">Phone Number</label>
-			<input type="number" id="name" name="lastname" placeholder="Your phone number...">
-		
-			<label for="email">Email</label>
-			<input type = "email" id="email" name="email" placeholder = "Enter your email...">
-		
-			<label for="text">Comments</label>
-			<textarea id="text" name="comments" placeholder="Any comments?" style="height:200px"></textarea>
-		
-			<input type="submit" value="Submit">
-		
-			</form>
+		<div class="header">
+				<div style = " margin-left: 20%;" class = "logo_container">
+					<h1><span>Contact Me</span></h1>
+						<ul style = " margin-left: 100%; margin-top: 7%;" class="navigation">
+							<a href = "index.html"><li>Home</li></a>
+							<a href = "AboutMe.html"><li>About Me</li></a>
+							<a href = "Projects.html"><li>Projects</li></a>
+							<a href = "ContactMe.html"><li>Contact Me</li></a>
+						</ul>
+				</div>
+		</div>
+			<div style = "margin:auto; margin-top: 4%;"  class ="formcontainer">
+				<form action="mailto: maiabot13@email.com" ?subject="Contact" method="post" enctype="text/plain" name="form">
+			
+				<label for="name">Name</label>
+				<input type= "text" id="name" name="firstname" placeholder="Enter your name....">
+			
+				<label for="phone">Phone Number</label>
+				<input type="number" id="name" name="lastname" placeholder="Your phone number...">
+			
+				<label for="email">Email</label>
+				<input type = "email" id="email" name="email" placeholder = "Enter your email...">
+			
+				<label for="text">Comments</label>
+				<textarea id="text" name="comments" placeholder="Any comments?" style="height:200px"></textarea>
+			
+				<input type="submit" value="Submit">
+			
+				</form>
+			</div>
 		</div>
 	</div>
 </body>
