--- a/Projects.html
+++ b/Projects.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- tells browser what version of html to use -->
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"> <!-- tells browser to use utf-8 character encoding -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Projects</title>
-	<link rel = "stylesheet" href = "style.css" >
+	<title>Projects</title> <!-- sets webpage title displayed in tab  -->
+	<link rel = "stylesheet" href = "style.css" > <!--  links this page to appropriate css file -->
 </head>
 <body>
-	<div class = "mainPage">
-		<div class="header">
-				<div style = " margin-left: 20%;" class = "logo_container">
-					<h1><span>Projects</span></h1>
-						<ul style = " margin-left: 100%; margin-top: 7%;" class="navigation">
-							<a href = "index.html"><li>Home</li></a>
-							<a href = "AboutMe.html"><li>About Me</li></a>
-							<a href = "Projects.html"><li>Projects</li></a>
-							<a href = "ContactMe.html"><li>Contact Me</li></a>
+	<div class = "mainPage"> <!-- creates a class for the main page backround  -->
+		<div class="header"> <!-- creates a div class for header  -->
+				<div style = " margin-left: 20%;" class = "header_container"> <!--  creates a div class for website header container -->
+					<h1><span>Projects</span></h1> <!--  creates header for website projects page -->
+						<ul style = " margin-left: 100%; margin-top: 7%;" class="navigation"> <!-- creates nav menu and pushes menu to far right   -->
+							<a href = "index.html"><li>Home</li></a> <!-- creates a hyperlink to home page  -->
+							<a href = "AboutMe.html"><li>About Me</li></a> <!-- creates hyperlink to about me page  -->
+							<a href = "Projects.html"><li>Projects</li></a> <!-- creates hyperlink to projects page  -->
+							<a href = "ContactMe.html"><li>Contact Me</li></a> <!-- creates hyperlink to contact me page  -->
 						</ul>
 				</div>
 		</div>
