"added different css files for different px amounts"

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"> <!-- tells browser to use utf-8 character encoding -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About Me</title> <!-- sets webpage title displayed in tab  -->
-	<link rel = "stylesheet" href = "style.css" > <!--  links this page to appropriate css file -->
+	<link rel = "stylesheet" href = "monitor.css" > <!--  links this page to appropriate css file -->
 </head>
 <body>
 	<div class = "mainPage"> <!-- creates a class for the main page backround  -->
