--- a/ContactMe.html
+++ b/ContactMe.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8"> <!-- tells browser to use utf-8 character encoding -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width">
 	<title>Contact Me</title> <!-- sets webpage title displayed in tab  -->
-	<link rel = "stylesheet" href = "style.css" > <!--  links this page to appropriate css file -->
+	<link href="monitor.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> <!-- full-size monitor style sheet-->
+	<link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> <!-- tablet style sheet-->
+	<link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)"> <!-- phone style sheet-->
 </head>
 <body>
 	<div class = "mainPage"> <!-- creates a class for the main page backround  -->
@@ -19,6 +21,7 @@
 						</ul>
 				</div>
 		</div>
+	</div>
 			<div style = "margin:auto; margin-top: 4%;"  class ="formcontainer"> <!-- creates a container for form with auto margin to center container -->
 				<form action="mailto: maiabot13@email.com" ?subject="Contact" method="post" enctype="text/plain" name="form"> <!-- when submitted the information in form is sent to specified email -->
 			
