"fixed top margin on contact page"

--- a/ContactMe.html
+++ b/ContactMe.html
@@ -22,7 +22,7 @@
 				</div>
 		</div>
 	</div>
-			<div style = "margin:auto; margin-top: 4%;"  class ="formcontainer"> <!-- creates a container for form with auto margin to center container -->
+			<div style = "margin:auto;"  class ="formcontainer"> <!-- creates a container for form with auto margin to center container -->
 				<form action="mailto: maiabot13@email.com" ?subject="Contact" method="post" enctype="text/plain" name="form"> <!-- when submitted the information in form is sent to specified email -->
 			
 				<label for="name">Name</label> <!-- creates label for name input section -->
