"added content to about me page and projects page"

--- a/ContactMe.html
+++ b/ContactMe.html
@@ -9,7 +9,7 @@
 	<link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)"> <!-- phone style sheet-->
 </head>
 <body>
-	<div class = "mainPage"> <!-- creates a class for the main page backround  -->
+	<div class = "mainPage" style = "height:100%;"> <!-- creates a class for the main page backround  -->
 		<div class="header"> <!-- creates a div class for header  -->
 				<div style = " margin-left: 20%;" class = "header_container"> <!--  creates a div class for website header container -->
 					<h1><span>Contact Me</span></h1> <!--  creates header for website contact me page -->
@@ -22,7 +22,7 @@
 				</div>
 		</div>
 	</div>
-			<div style = "margin:auto;"  class ="formcontainer"> <!-- creates a container for form with auto margin to center container -->
+			<div style = "margin:auto; margin-left: 25%; margin-top: 8%;"  class ="formcontainer"> <!-- creates a container for form with auto margin to center container -->
 				<form action="mailto: maiabot13@email.com" ?subject="Contact" method="post" enctype="text/plain" name="form"> <!-- when submitted the information in form is sent to specified email -->
 			
 				<label for="name">Name</label> <!-- creates label for name input section -->
