--- a/Projects.html
+++ b/Projects.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"> <!-- tells browser to use utf-8 character encoding -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Projects</title> <!-- sets webpage title displayed in tab  -->
-	<link rel = "stylesheet" href = "style.css" > <!--  links this page to appropriate css file -->
+	<link rel = "stylesheet" href = "monitor.css" > <!--  links this page to appropriate css file -->
 </head>
 <body>
 	<div class = "mainPage"> <!-- creates a class for the main page backround  -->
@@ -18,6 +18,20 @@
 							<a href = "ContactMe.html"><li>Contact Me</li></a> <!-- creates hyperlink to contact me page  -->
 						</ul>
 				</div>
+		</div>
+
+		<div class = gradientbox style = "margin: auto; margin-left: 25%; margin-top: 3%; height: 100%;" >
+			
+			<h2> Projects I have completed </h2>
+			<p> -Restaurant reservation system (python)</p>
+			<p> -Hangman (python) </p>
+			<p> -Calculator (python) </p>
+			<h2>----------------------------------------------</h2>
+			<h2> Projects I wish to complete </h2>
+			<p> - Album tracking app to keep track of your favourite music</p>
+			<p> - various scripting programs (ie port scanner) </p>
+			
+
 		</div>
 	
 	</div> 
