--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<meta charset="utf-8"> <!-- tells browser to use utf-8 character encoding -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Home Page</title> <!-- sets webpage title displayed in tab  -->
-	<link rel = "stylesheet" href = "monitor.css" > <!--  links this page to appropriate css file -->
+	<link href="monitor.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> <!-- full-size monitor style sheet-->
+	<link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> <!-- tablet style sheet-->
+	<link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)"> <!-- phone style sheet-->
 </head>
 <body>
 	<div class = "mainPage"> <!-- creates a class for the main page backround  -->
 		<div class="header"> <!-- creates a div class for header  -->
-				<div style = " margin-left: 20%;" class = "header_container"> <!--  creates a div class for website header container -->
+				<div style = " margin-left: 10%;" class = "header_container"> <!--  creates a div class for website header container -->
 					<h1><span>Maia Frangoudis</span></h1> <!--  creates header for website home page -->
 						<ul style = " margin-left: 100%; margin-top: 7%;" class="navigation"> <!-- creates nav menu and pushes menu to far right   -->
 							<a href = "index.html"><li>Home</li></a> <!-- creates a hyperlink to home page  -->
