--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About Me</title> <!-- sets webpage title displayed in tab  -->
 	<link rel = "stylesheet" href = "monitor.css" > <!--  links this page to appropriate css file -->
+	<link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> <!-- tablet style sheet-->
+	<link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)"> <!-- phone style sheet-->
 </head>
 <body>
 	<div class = "mainPage"> <!-- creates a class for the main page backround  -->
@@ -18,6 +20,27 @@
 							<a href = "ContactMe.html"><li>Contact Me</li></a> <!-- creates hyperlink to contact me page  -->
 						</ul>
 				</div>
+		</div>
+
+		<div class = "aboutme">
+
+			<video height="500px" width="500px" controls poster="images/watch.jpg">
+				<source src="videos/videoOG.ogv" type="video/ogg">
+				<source src="videos/videomp4.mp4" type="video/mp4">
+			</video>
+
+			<img src="images/me.jpg" style = "height:25%; width:25%; margin-right: 10%; float: right; margin-top: 3%;" alt="">
+	
+			<div class = "abouttext" style = "margin:auto">
+				<p>
+					My name is Maia,
+					I am an 18 year old second year networking and IT security student and my favourite programming language is python!
+	
+				</p>
+			</div>
+		</div>
+
+
 		</div>
 	
 	</div> 
