"added final touches in css files and added footer"

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -39,11 +39,12 @@
 				</p>
 			</div>
 		</div>
-
+		<footer style = "margin-top: 7%;">
+			<p> ⓒ 2022 by Maia Frangoudis (Maiabot13@gmail.com) </p>
+		</footer>
 
 		</div>
-	
-	</div> 
+	 
 
 </body>
 </html>
