--- a/Projects.html
+++ b/Projects.html
@@ -20,7 +20,7 @@
 				</div>
 		</div>
 
-		<div class = gradientbox style = "margin: auto; margin-left: 25%; margin-top: 3%; height: 100%;" >
+		<div class = gradientbox style = "margin: auto; margin-left: 25%; margin-top: 3%; height: 70%;" >
 			
 			<h2> Projects I have completed </h2>
 			<p> -Restaurant reservation system (python)</p>
@@ -32,8 +32,12 @@
 			<p> - various scripting programs (ie port scanner) </p>
 			
 
+			
 		</div>
-	
+
+		<footer style = "margin-top: 43%;">
+			<p> ⓒ 2022 by Maia Frangoudis (Maiabot13@gmail.com) </p>
+		</footer>
 	</div> 
 
 </body>
