--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 						</ul>
 				</div>
 		</div>
+
+		<footer style="margin-top: 43%;">
+			<p> ⓒ 2022 by Maia Frangoudis (Maiabot13@gmail.com) </p>
+		</footer>
 	
 	</div> 
 
