--- a/AboutMe.html
+++ b/AboutMe.html
@@ -22,16 +22,16 @@
 				</div>
 		</div>
 
-		<div class = "aboutme">
+		<div class = "aboutme"> <!-- creates div class for about me -->
 
-			<video height="500px" width="500px" controls poster="images/watch.jpg">
-				<source src="videos/videoOG.ogv" type="video/ogg">
-				<source src="videos/videomp4.mp4" type="video/mp4">
+			<video height="500px" width="500px" controls poster="images/watch.jpg"> <!-- adds video controls for user -->
+				<source src="videos/videoOG.ogv" type="video/ogg"> <!-- adds ogv format of video -->
+				<source src="videos/videomp4.mp4" type="video/mp4"> <!-- adds mp4 format of video -->
 			</video>
 
-			<img src="images/me.jpg" style = "height:25%; width:25%; margin-right: 10%; float: right; margin-top: 3%;" alt="">
+			<img src="images/me.jpg" style = "height:25%; width:25%; margin-right: 10%; float: right; margin-top: 3%;" alt=""> <!-- adds photo of me -->
 	
-			<div class = "abouttext" style = "margin:auto">
+			<div class = "abouttext" style = "margin:auto"> <!-- adds text for about me page -->
 				<p>
 					My name is Maia,
 					I am an 18 year old second year networking and IT security student and my favourite programming language is python!
@@ -39,6 +39,7 @@
 				</p>
 			</div>
 		</div>
+		<!-- adds footer -->
 		<footer style = "margin-top: 7%;">
 			<p> ⓒ 2022 by Maia Frangoudis (Maiabot13@gmail.com) </p>
 		</footer>
