--- a/Projects.html
+++ b/Projects.html
@@ -20,9 +20,10 @@
 				</div>
 		</div>
 
-		<div class = gradientbox style = "margin: auto; margin-left: 25%; margin-top: 3%; height: 70%;" >
+		<div class = gradientbox style = "margin: auto; margin-left: 25%; margin-top: 3%; height: 70%;" > <!-- creates a div class for gradient box to display projects-->
 			
-			<h2> Projects I have completed </h2>
+			<!-- description of my projects -->
+			<h2> Projects I have completed </h2> 
 			<p> -Restaurant reservation system (python)</p>
 			<p> -Hangman (python) </p>
 			<p> -Calculator (python) </p>
@@ -35,7 +36,8 @@
 			
 		</div>
 
-		<footer style = "margin-top: 43%;">
+		<!-- creates a footer -->
+		<footer style = "margin-top: 43%;"> 
 			<p> ⓒ 2022 by Maia Frangoudis (Maiabot13@gmail.com) </p>
 		</footer>
 	</div> 
