--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				</div>
 		</div>
 
+		<!-- adds footer -->
 		<footer style="margin-top: 43%;">
 			<p> ⓒ 2022 by Maia Frangoudis (Maiabot13@gmail.com) </p>
 		</footer>
