--- a/ContactMe.html
+++ b/ContactMe.html
@@ -41,6 +41,8 @@
 				
 					</form>
 				</div>
+
+				<!-- adds footer-->
 				<footer style = "margin-top: 43%;">
 					<p> ⓒ 2022 by Maia Frangoudis (Maiabot13@gmail.com) </p>
 				</footer>
