--- a/AboutMe.html
+++ b/AboutMe.html
@@ -39,7 +39,7 @@
 				</p>
 			</div>
 		</div>
-		<!-- adds footer -->
+		<!-- adds footer for copyright -->
 		<footer style = "margin-top: 7%;">
 			<p> ⓒ 2022 by Maia Frangoudis (Maiabot13@gmail.com) </p>
 		</footer>
