--- a/Projects.html
+++ b/Projects.html
@@ -4,7 +4,10 @@
 	<meta charset="utf-8"> <!-- tells browser to use utf-8 character encoding -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Projects</title> <!-- sets webpage title displayed in tab  -->
-	<link rel = "stylesheet" href = "monitor.css" > <!--  links this page to appropriate css file -->
+	<title>Home Page</title> <!-- sets webpage title displayed in tab  -->
+	<link href="monitor.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> <!-- full-size monitor style sheet-->
+	<link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> <!-- tablet style sheet-->
+	<link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)"> <!-- phone style sheet-->
 </head>
 <body>
 	<div class = "mainPage"> <!-- creates a class for the main page backround  -->
